Issue #558: Lux-Card übernimmt line-height von Lux-Accordion (Scrollbar am Lux-Card Title)

--- a/src/authentic/_custom.scss
+++ b/src/authentic/_custom.scss
@@ -183,6 +183,12 @@ lux-accordion {
       header-disabled-state-text-color: luxcommon.$dark-disabled-text
     )
   );
+  
+  lux-panel-content lux-card mat-card {
+    .lux-card-title {
+      line-height: normal;
+    }
+  }
 }
 
 /**
